[build-system]
requires = ["setuptools"]  # the build tool to use
build-backend = "setuptools.build_meta"  # the function to use to build the package

[project]
name = "stelevator"
version = "0.0.1"
dependencies = ["numpy", "pandas", "matplotlib"]
requires-python = ">=3.7"

[project.optional-dependencies]
tensorflow = ["tensorflow"]
jax = ["jax"]
pytensor = ["pytensor"]
